lang/examples/bad/IndexOutOfBounds.gt
fn main() -> int {
    var x : [int];
    x = ([int])malloc(5);
    return x[5];
}
